syntax = "proto3";

option go_package = "trans";

package transclient;

service Trans {
  rpc TransOut(AdjustInfo)  returns (Response);
  rpc TransIn(AdjustInfo)  returns (Response);
}

message AdjustInfo {
  int64 Amount = 1;
  int64 UserID = 2;
}

message Response {
}